used DTO everywhere only user class pending